--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,7 +1,7 @@
 ---
-title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+title: "Font for constructed language"
+excerpt: "Short description of portfolio item number 2 <br/><img src='https://github.com/nevmenandr/artlang-dani-el/raw/main/graphics/example.png'>"
 collection: portfolio
 ---
 
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+I drew this [font](https://github.com/nevmenandr/artlang-dani-el?tab=readme-ov-file#%D1%88%D1%80%D0%B8%D1%84%D1%82) as writing system for a language that doesn't exist. 
