--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -4,4 +4,4 @@ excerpt: "Short description of portfolio item number 2 <br/><img src='https://gi
 collection: portfolio
 ---
 
-I drew this [font](https://github.com/nevmenandr/artlang-dani-el?tab=readme-ov-file#%D1%88%D1%80%D0%B8%D1%84%D1%82) as writing system for a language that doesn't exist. 
+I drew this [font](https://github.com/nevmenandr/artlang-dani-el?tab=readme-ov-file#%D1%88%D1%80%D0%B8%D1%84%D1%82) as writing system for a [language](https://github.com/nevmenandr/artlang-dani-el) that doesn't exist. 
