--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
 title: "Font for constructed language"
-excerpt: "Short description of portfolio item number 2 <br/><img src='https://github.com/nevmenandr/artlang-dani-el/raw/main/graphics/example.png'>"
+excerpt: "Pretty letters for the language that doesn't exist <br/><img src='https://github.com/nevmenandr/artlang-dani-el/raw/main/graphics/example.png'>"
 collection: portfolio
 ---
 
